# didactic-octo-train

./: .gitignore  .oxlintrc.json  .prettierrc  Cargo.toml  MIGRATION_COMPLETE.md  MONOREPO_MIGRATION.md  browser.js  index.d.ts  index.js  napi-test.wasi-browser.js  napi-test.wasi.cjs  package.json  pnpm-lock.yaml  turbo.json
.changeset/: fancy-olives-think.md  four-dryers-admire.md  spicy-flies-bow.md  spotty-insects-know.md  whole-corners-find.md
.github/workflows/: CI.yml  release.yml
__test__/: index.spec.ts
apps/example/: CHANGELOG.md  package.json  turbo.json  vite.config.ts
apps/example/src/: App.tsx  canvas.tsx  use-takeoff-engine.ts
crates/takeoff_core/: Cargo.toml
crates/takeoff_core/src/: measurement.rs  polygon.rs  polyline.rs  rectangle.rs  scale.rs  state.rs  units.rs
crates/takeoff_tools/: Cargo.toml
crates/takeoff_tools/src/: count.rs  lib.rs  line.rs  polygon.rs  polyline.rs  rectangle.rs  scale.rs  selection.rs
crates/takeoff_tools/tests/: selection_test.rs  tools_test.rs
src/: engine.rs  lib.rs
src/takeoff_core/: coords.rs  measurement.rs  mod.rs  polygon.rs  polyline.rs  rectangle.rs  scale.rs  state.rs
src/takeoff_tools/: count.rs  line.rs  mod.rs  polygon.rs  polyline.rs  rectangle.rs  scale.rs  selection.rs
tests/: selection_test.rs  tools_test.rs
